--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -18,21 +18,25 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/animated_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="250dp"
             android:layout_marginEnd="10dp"
+            android:animateLayoutChanges="true"
             android:minHeight="600dp"
             card_view:cardCornerRadius="35dp">
 
 
             <LinearLayout
+                android:id="@+id/animated_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
                 android:orientation="vertical"
-                android:paddingBottom="250dp">
+                android:paddingBottom="250dp"
+                android:visibility="gone">
 
 
                 <TextView
