--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,21 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/backgroundColor"
     tools:context=".activities.MainActivity">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swiperefresh"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp">
+        android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <com.gigamole.navigationtabstrip.NavigationTabStrip
+            android:id="@+id/nts_top"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="56dp"
+            android:layout_gravity="center"
+            app:nts_active_color="@android:color/black"
+            app:nts_color="@color/colorAccent"
+            app:nts_corners_radius="1dp"
+            app:nts_inactive_color="#717171"
+            app:nts_size="18sp"
+            android:background="#ffad42"
+            app:nts_titles="@array/titles"
+            app:nts_weight="5dp"/>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <FrameLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
